<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KonversiRupiah">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_judul_rupiah"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:text="@string/judul_konversi_rupiah"/>

        <TextView
            android:id="@+id/tv_input_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/input_rupiah"/>

        <EditText
            android:id="@+id/et_input_uang"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:hint="@string/input_uang"/>

        <TextView
            android:id="@+id/tv_rupiah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rupiah"/>

        <TextView
            android:id="@+id/tv_hasil_konversi_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/hasil_konversi_rupiah"/>

        <Button
            android:id="@+id/btn_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cek Dollar"/>
    </LinearLayout>

</ScrollView>